@@ -6,79 +6,38 @@ redirect_from:
 
 # Upgrading Metabase
 
-Instructions for upgrading to a new [Metabase release](https://github.com/metabase/metabase/releases).
+This page covers how to upgrade to a new [Metabase release](https://github.com/metabase/metabase/releases).
 
-## Backing up your application database
+## Upgrading Metabase Cloud
 
-The application database keeps track of all of your people, dashboards, questions, collections, permissions: all the application data in Metabase (that is, everything but the data you've connected to Metabase). While it's unlikely you'll need to roll back to your current version, a backup will do wonders for your peace of mind.
+If you're on a [Metabase Cloud](https://www.metabase.com/pricing/) plan, we'll upgrade your Metabase automatically with each new release; no action needed on your end. 
+
+How soon we upgrade you depends on the type of release:
+
+- Minor releases (e.g., x.54.4 to x.54.5): Usually about a week.
+- Major releases (e.g., x.53.4 to x.54.1): Longer, usually months (just to make sure everything goes smoothly).
+
+Cloud customers can request an early upgrade by emailing support at help@metabase.com. Include the URL of the Metabase you want us to upgrade.
+
+## Upgrading a self-hosted Metabase
+
+Here are the steps for upgrading to a new Metabase version (major or minor):
+
+### 1. Back up of your application database
+
+The application database keeps track of every single thing (but the data of your connected database) of your Metabase instance. While it's unlikely you'll need to roll back to your current version, a backup will do wonders for your peace of mind in case something goes wrong.
 
 See [Backing up Metabase application data](backing-up-metabase-application-data.md).
 
-## Swapping in the new Metabase version
+### 2. Swap in the new Metabase version
 
-Steps differ depending on whether you're running the JAR or a Docker image.
+Steps differ depending on whether you're running the container image or the JAR.
 
-### Upgrading a JAR running locally
+**Upgrading the container image**
 
-If you're running the JVM Jar file directly:
+1. Stop the current container.
 
-1. [Back up your application database](backing-up-metabase-application-data.md).
-
-2. Download the latest version of the JAR file:
-
-   - [Metabase Open Source JAR](https://www.metabase.com/start/oss/jar)
-   - [Metabase Pro or Enterprise JAR](https://downloads.metabase.com/enterprise/latest/metabase.jar)
-
-3. Use a terminal to access your existing Metabase process and kill it (usually CTRL-C).
-
-4. Replace the existing JAR file (`metabase.jar`) in your Metabase directory with the newer version.
-
-5. Restart the server:
-
-   ```
-   java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
-   ```
-
-On startup, Metabase will perform any tasks it needs to complete the upgrade. Once Metabase has completed those tasks, you'll be running the new version.
-
-### Upgrading a JAR running in production as a service
-
-To upgrade, you'll need to stop the service, replace the JAR with the newer version, and restart the service.
-
-E.g., if you're running Metabase on Debian as a service using Nginx.
-
-1. [Back up your application database](backing-up-metabase-application-data.md).
-
-2. Download the latest version of the JAR file:
-
-   - [Metabase Open Source JAR](https://www.metabase.com/start/oss/jar)
-   - [Metabase Pro or Enterprise JAR](https://downloads.metabase.com/enterprise/latest/metabase.jar)
-
-3. Stop the Metabase service. Aassuming you called your service `metabase.service`), you'll run:
-
-   ```
-   sudo systemctl stop metabase.service
-   ```
-
-4. In your Metabase directory on your server, replace the current (older) Metabase JAR file with the newer JAR you downloaded.
-
-5. Restart the service:
-
-   ```
-   sudo systemctl restart metabase.service
-   ```
-
-### Upgrading the Docker image
-
-If you're running Metabase in a Docker container:
-
-1. [Back up your application database](backing-up-metabase-application-data.md).
-
-   > WARNING: If you're not using a [production-ready database](migrating-from-h2.md), your application data (questions, dashboards, and so on) will have been stored in an H2 database _inside_ your container. Upgrading requires swapping out your existing container for a new image with the upgraded Metabase JAR, which will wipe out your application data. We recommend switching to a production-ready database before you upgrade.
-
-2. Stop the current Docker container.
-
-3. Pull the latest Metabase Docker image.
+2. Pull the latest Metabase Docker image (though we recommend that you pull a specific tag instead of using `latest`).
 
    Metabase Open Source:
 
@@ -92,7 +51,7 @@ If you're running Metabase in a Docker container:
    docker pull metabase/metabase-enterprise:latest
    ```
 
-4. Start the new Docker container. Depending on the ports and what you want to name the container, the command will look something like:
+3. Start the new container image. Depending on the ports and container name, the command will look something like:
 
    Metabase Open Source:
 
@@ -107,6 +66,31 @@ If you're running Metabase in a Docker container:
    ```
 
 On startup, Metabase will perform the upgrade automatically. Once Metabase has completed the upgrade, you'll be running the new version.
+
+**Upgrading the JAR**
+
+To upgrade, you'll need to stop the service, replace the JAR with the newer version, and restart the service.
+
+E.g., if you're running Metabase on Debian as a service using Nginx.
+
+1. Stop the Metabase service. Assuming you called your service `metabase.service`, you'll run:
+
+   ```
+   sudo systemctl stop metabase.service
+   ```
+
+2. Download the latest version of the JAR file:
+
+   - [Metabase Open Source JAR](https://www.metabase.com/start/oss/jar)
+   - [Metabase Pro or Enterprise JAR](https://downloads.metabase.com/enterprise/latest/metabase.jar)
+
+And replace the current (older) Metabase JAR file with the newer JAR you downloaded.
+
+3. Restart the service:
+
+   ```
+   sudo systemctl restart metabase.service
+   ```
 
 ## Upgrading from older versions of Metabase
 
@@ -123,24 +107,30 @@ With X being the latest version available for each release.
 
 Check out a list of [Metabase releases](https://github.com/metabase/metabase/releases).
 
-## Upgrading Metabase Cloud
-
-If you're on a [Metabase Cloud](https://www.metabase.com/pricing/) plan, we'll upgrade your Metabase automatically with each new release; no action needed on your end. How soon we upgrade you depends on the type of release:
-
-- Minor releases (e.g., x.47.4 to x.47.5): Usually about a week.
-- Major releases (e.g., x.47.4 to x.48.0): Longer, usually weeks (just to make sure everything goes smoothly).
-
-Cloud customers can request an early upgrade by emailing support at help@metabase.com. Include the URL of the Metabase you want us to upgrade.
+When upgrading between major versions (e.g. v53.x to v54.x), use the latest minor version available for that major version. E.g., if you want to upgrade from v50 to v51, use the latest point version available for 51.
 
 ## Upgrading Metabase on other platforms
 
 - [Upgrading Azure Web Apps deployments](running-metabase-on-azure.md#additional-configurations)
 
-## Rolling back an upgrade
+## What happens during an upgrade or downgrade?
+
+During a **major version** upgrade (e.g., 53.1 or 54.1), Metabase will:
+
+- Perform all the migrations needed to upgrade to the new version, such as any schema changes to the application database between the two versions.
+- Keep all the metadata it needs to work on the application database.
+
+Metabase will do all this automatically. 
+
+If you need to downgrade after a major version upgrade, you'll either need to restore from a backup, or manually migrate to a lower version, otherwise Metabase may refuse to start (see the next section).
+
+Durning a **minor version upgrade** (e.g., 54.1 to 54.2), the new Metabase container or Jar will just work. Only in rare cases will it have to perform a migration, but, like with major version upgrades, Metabase will perform the migration automatically. And of course, you're backing up your application database each time you upgrade, right?
+
+## Rolling back an upgrade or to an older version
 
 In general, regular backups (especially backups before upgrading), are the best policy, so we recommend reverting to a backup of your application database to roll back an upgrade.
 
-But if you've made changes to your application database since upgrading that you want to keep, you may be able to use the `migrate down` command to roll back your Metabase application database to support the previous Metabase version you were running. When Metabase upgrades to a new version, it runs migrations that may change the application database schema. The `migrate down` command undoes those schema changes. In general, we recommend restoring from a backup (the backup that you definitely remembered to generate before upgrading), and only using the `migrate down` command if you really need to keep changes made after your upgrade.
+But if you've made any change (adding new questions/dashboards, etc) since upgrading that you want to keep, you may be able to use the `migrate down` command to roll back your Metabase application database to support the previous Metabase version you were running. When Metabase upgrades to a new version, it runs migrations that may change the application database schema. The `migrate down` command undoes those schema changes. In general, we recommend restoring from a backup (the backup that you definitely remembered to generate before upgrading), and only using the `migrate down` command if you really need to keep changes made after your upgrade.
 
 ### Using the migrate down command
 
@@ -166,15 +156,19 @@ docker run
   -e "MB_DB_USER=name" \
   -e "MB_DB_PASS=password" \
   -e "MB_DB_HOST=my-database-host" \
---rm metabase/metabase "migrate down"
+--rm metabase/metabase:<tag> "migrate down"
 ```
 
-If you're running Docker Compose with the right environments variables, the command would be:
+Note the quotes around `"migrate down"`. You can also just open a shell into the container and run the migrate command inside it.
 
-```
-docker compose run metabase "migrate down"
-```
+Once the migration process completes, start up Metabase using the JAR or container image for the version you want to run.
 
-Note the quotes around `"migrate down"` for the Docker and Docker compose command.
+## Upgrading Metabase running in a cluster
 
-Once the migration process completes, start up Metabase using the JAR or Docker image for the version you want to run.
+If you're running Metabase in a cluster:
+
+1. Reduce the number of nodes to a single node. You can't upgrade all nodes at the same time because the ugprade process works by acquiring a migration lock on the application database from a single client, which performs the migration. If you keep more than one node active when you do a major version upgrade, the application won't behave correctly, as schema changes to the application database could cause problems for nodes that are still running the older version of Metabase.
+2. Perform the upgrade as normal (as outlined above).
+3. Raise the number of nodes to the same number you had before.
+
+Make sure you container orchestrator or cluster manager doesn't kill the Metabase process while it's performing the migrations, otherwise you'll may end up with a corrupted application database and you'll need to restore from a backup.
